welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
  if (10<=a && 20=>a){return true}
            ^in1020:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
  if (10<=b && 20=>b){return true}
            ^