welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (10<=a && 20=>a){return true}
  if (10<=b && 20=>b){return true}
  return false}